--- a/quiz1.html
+++ b/quiz1.html
@@ -18,7 +18,7 @@
         button.addEventListener('click', () => {
             box.style.transition = 'transform 1s ease-in';
             box.style.transform = 'translateX(800px)';
-            box.style.transform = 'translateX(500px)';
+            box.style.transform = 'translateX(500px)'; // finally
         });
     </script>
 </body>
